binrw/tests/ui/conflicting_keyword_option.stderr
error: conflicting `magic` keyword
 --> $DIR/conflicting_keyword_option.rs:5:19
  |
5 | #[br(magic = 0u8, magic = 0u8)]
  |                   ^^^^^
